tests/samples/negative/types/noncopy_map_get_path_value.ax
module noncopy_map_get_path_value;

import std.core.map as map;
import std.fs.path as path;

fn main() -> i32 {
    var table: map::Map<u8, path::Path> = map::Map<u8, path::Path>.new();
    let found = table.get(b'a');
    table.destroy();
    return 0;
}
